force-app/main/default/objects/Deal_Review__c/Deal_Review__c.object-meta.xml
<CustomObject>
    <label>Deal Review</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deal Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>