force-app/main/default/objects/Deal_Review__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>indirectly relates to Account.Account_Segment__c</description>
    <label>Deprecated - Account Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Enterprise East</fullName>
            </value>
            <value>
                <fullName>Enterprise West</fullName>
            </value>
            <value>
                <fullName>Enterprise Canada</fullName>
            </value>
            <value>
                <fullName>Global Industries</fullName>
            </value>
            <value>
                <fullName>USGS</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
                <default>true</default>
                <label>Unassigned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>