force-app/main/default/objects/Deal_Review__c/fields/Account_Segment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment_Formula__c</fullName>
    <formula>IF( 
ISBLANK(Account__r.Account_Segment_Formula__c),
&quot;Unassigned&quot;,
Account__r.Account_Segment_Formula__c
)</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>