force-app/main/default/objects/Deal_Review__c/fields/ACV_Annual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>ACV_Annual_Contract_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ACV (Annual Contract Value)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>