force-app/main/default/objects/Deal_Review__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>CASE(
  Primary_Product_Line__c,

  &quot;Entertainment Services&quot;, &quot;MAS&quot;,
   &quot;SBS Pallet Storage&quot;, &quot;W&amp;L&quot;,
   &quot;ITRenew Contracted Sales Only&quot;, &quot;ALM&quot;,
  &quot;DM SITAD&quot;, &quot;ALM&quot;,
  &quot;Regency Technologies - Contracted Sales Only&quot;,&quot;ALM&quot;,
  &quot;Data Centers&quot;, &quot;Digital&quot;,
  &quot;Digital Solutions&quot;, &quot;Digital&quot;,
  &quot;DM Cloud Solutions&quot;, &quot;Digital&quot;,
  &quot;Fixed Asset Management&quot;, &quot;Digital&quot;,
  &quot;Information Governance&quot;, &quot;Digital&quot;,
  &quot;InSight&quot;, &quot;Digital&quot;,
  &quot;Data Management&quot;, &quot;RIM&quot;,
  &quot;DM (All other service lines)&quot;, &quot;RIM&quot;,
  &quot;DM Tape Vaulting&quot;, &quot;RIM&quot;,
  &quot;RM (All other service lines)&quot;, &quot;RIM&quot;,
  &quot;RM Secure Storage&quot;, &quot;RIM&quot;,
  &quot;Secure Shredding&quot;, &quot;RIM&quot;,
  &quot;SMB Packages&quot;, &quot;RIM&quot;,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>