force-app/main/default/objects/Deal_Review__c/fields/Deal_Review_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Nickname__c</fullName>
    <description>New deal review nickname</description>
    <label>Deal Review Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>