force-app/main/default/objects/Deal_Review__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Deal</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Up-Sell/Lift</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>