force-app/main/default/objects/Deal_Review__c/fields/Deal_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Formula__c</fullName>
    <formula>CASE(

Deal_Type__c,

&quot;Renewal&quot;,&quot;Renewal&quot;,
&quot;New Deal&quot;,&quot;Non-Renewal&quot;,
&quot;Up-Sell/Lift&quot;,&quot;Non-Renewal&quot;,
&quot;Framework&quot;,&quot;Non-Renewal&quot;,

&quot;Non-Renewal&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>