force-app/main/default/objects/Deal_Review__c/fields/Dedicated_Capital__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Capital__c</fullName>
    <label>Dedicated Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>