force-app/main/default/objects/Deal_Review__c/fields/Discount_to_Floor__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_Floor__c</fullName>
    <label>CRMA Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>