force-app/main/default/objects/Deal_Review__c/fields/Discount_to_Floor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_Floor_Percent__c</fullName>
    <label>% Discount to Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>