force-app/main/default/objects/Deal_Review__c/fields/Floor_Revenue_Realization_Percent__c.field-meta.xml
<CustomField>
    <fullName>Floor_Revenue_Realization_Percent__c</fullName>
    <label>% Floor Revenue Realization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>