force-app/main/default/objects/Deal_Review__c/fields/IMGA_Account__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMGA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Reviews (IMGA Account)</relationshipLabel>
    <relationshipName>Deal_Reviews_IMGA</relationshipName>
    <type>Lookup</type>
</CustomField>