force-app/main/default/objects/Deal_Review__c/fields/L1_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L1_Approved_Date__c</fullName>
    <label>L1 Approved Date</label>
    <type>DateTime</type>
</CustomField>