force-app/main/default/objects/Deal_Review__c/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>