force-app/main/default/objects/Deal_Review__c/fields/L1_Approver_Backup__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1 Approver Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>