force-app/main/default/objects/Deal_Review__c/fields/L1_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver_Comments__c</fullName>
    <label>L1 Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>