force-app/main/default/objects/Deal_Review__c/fields/L2_Commercial_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L2_Commercial_Approved_Date__c</fullName>
    <label>L2 Commercial Approved Date</label>
    <type>DateTime</type>
</CustomField>