force-app/main/default/objects/Deal_Review__c/fields/L2_Commercial_Approver_Backup__c.field-meta.xml
<CustomField>
    <fullName>L2_Commercial_Approver_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L2 Commercial Approver Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Reviews2</relationshipName>
    <type>Lookup</type>
</CustomField>