force-app/main/default/objects/Deal_Review__c/fields/L2_Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L2 Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>