force-app/main/default/objects/Deal_Review__c/fields/L2_Finance_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>L2_Finance_Approver_Comments__c</fullName>
    <label>L2 Finance Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>