force-app/main/default/objects/Deal_Review__c/fields/L3_ALM_Finance_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L3_ALM_Finance_Approved_Date__c</fullName>
    <label>L3 ALM Finance Approved Date</label>
    <type>Date</type>
</CustomField>