force-app/main/default/objects/Deal_Review__c/fields/L3_ALM_Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>L3_ALM_Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3 ALM Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Reviews_l3almfin</relationshipName>
    <type>Lookup</type>
</CustomField>