force-app/main/default/objects/Deal_Review__c/fields/L3_Global_Digital_Product_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L3_Global_Digital_Product_Approved_Date__c</fullName>
    <label>L3 Global Digital Product Approved Date</label>
    <type>DateTime</type>
</CustomField>