force-app/main/default/objects/Deal_Review__c/fields/L3_Global_Product_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>L3_Global_Product_Approver_Comments__c</fullName>
    <label>L3 Global Product Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>