force-app/main/default/objects/Deal_Review__c/fields/L3_Global_RIM_EVP_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>L3_Global_RIM_EVP_Approved_Date__c</fullName>
    <label>L3 Global RIM EVP Approved Date</label>
    <type>DateTime</type>
</CustomField>