force-app/main/default/objects/Deal_Review__c/fields/L3_GRO_CFO_Approver__c.field-meta.xml
<CustomField>
    <fullName>L3_GRO_CFO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3 GRO CFO Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Reviews4</relationshipName>
    <type>Lookup</type>
</CustomField>