force-app/main/default/objects/Deal_Review__c/fields/No_PA_Model_Required__c.field-meta.xml
<CustomField>
    <fullName>No_PA_Model_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No PA Model Upload</label>
    <type>Checkbox</type>
</CustomField>