force-app/main/default/objects/Deal_Review__c/fields/ORB_Required__c.field-meta.xml
<CustomField>
    <fullName>ORB_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ORB Required</label>
    <type>Checkbox</type>
</CustomField>