force-app/main/default/objects/Deal_Review__c/fields/ORB_Slack_Link__c.field-meta.xml
<CustomField>
    <fullName>ORB_Slack_Link__c</fullName>
    <label>toBedeleted ORB Slack Link</label>
    <type>Url</type>
</CustomField>