force-app/main/default/objects/Deal_Review__c/fields/Plan_To_Win_Link__c.field-meta.xml
<CustomField>
    <fullName>Plan_To_Win_Link__c</fullName>
    <label>Plan to Win Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>