force-app/main/default/objects/Deal_Review__c/fields/Price_Desk_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Desk_Approved_Date__c</fullName>
    <label>Price Desk Approved Date</label>
    <type>DateTime</type>
</CustomField>