force-app/main/default/objects/Deal_Review__c/fields/Price_Desk_Approver__c.field-meta.xml
<CustomField>
    <fullName>Price_Desk_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Desk Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_ReviewsmHUl</relationshipName>
    <type>Lookup</type>
</CustomField>