force-app/main/default/objects/Deal_Review__c/fields/Price_Desk_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Price_Desk_Approver_Comments__c</fullName>
    <label>Price Desk Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>