force-app/main/default/objects/Deal_Review__c/fields/Product_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Formula__c</fullName>
    <formula>CASE( 

Primary_Product_Line__c , 

&quot;Data Centers&quot;,&quot;Other&quot;,
&quot;Data Management&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;Digital Solutions&quot;,&quot;Other&quot;,
&quot;DM (All other service lines)&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;DM Cloud Solutions&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;DM SITAD&quot;,&quot;Other&quot;,
&quot;DM Tape Vaulting&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;Entertainment Services&quot;,&quot;Other&quot;,
&quot;Fixed Asset Management&quot;,&quot;Other&quot;,
&quot;Information Governance&quot;,&quot;Other&quot;,
&quot;InSight&quot;,&quot;Other&quot;,
&quot;ITRenew Contracted Sales Only&quot;,&quot;Other&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;Records Management&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;RM (All other service lines)&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;RM Secure Storage&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;Scan&quot;,&quot;Other&quot;,
&quot;Secure Shredding&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;Shred&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;Sierra26&quot;,&quot;Other&quot;,
&quot;SMB Packages&quot;,&quot;Other&quot;,
&quot;Special Projects - Data Management&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;Special Projects - International&quot;,&quot;Other&quot;,
&quot;Special Projects - Records Management &amp; Shred&quot;,&quot;Recurring RM, DM or Shred&quot;,
&quot;W&amp;L Pallet Storage&quot;,&quot;Other&quot;,
&quot;Warehouse and Logistics&quot;,&quot;Other&quot;,

&quot;Other&quot;
)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>