force-app/main/default/objects/Deal_Review__c/fields/Reason_for_No_PA_Model__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_No_PA_Model__c</fullName>
    <label>Reason for No PA Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing rates with no rate changes</fullName>
            </value>
            <value>
                <fullName>Pre-approved or list rates</fullName>
            </value>
            <value>
                <fullName>Other pricing model or tool</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Previously approved Framework pricing</fullName>
            </value>
            <value>
                <fullName>Smart Quoting Model</fullName>
            </value>
            <value>
                <fullName>Affiliating to existing approved pricing</fullName>
                <isActive>false</isActive>
                <label>Affiliating to existing approved pricing</label>
            </value>
            <value>
                <fullName>Leveraging pre-approved pricing proposal</fullName>
                <isActive>false</isActive>
                <label>Leveraging pre-approved pricing proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>