force-app/main/default/objects/Deal_Review__c/fields/Revenue_Dilution__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Dilution__c</fullName>
    <label>CRMA Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>