force-app/main/default/objects/Deal_Review__c/fields/Revenue_Dilution_Percent__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Dilution_Percent__c</fullName>
    <label>% Revenue Dilution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>