force-app/main/default/objects/Deal_Review__c/fields/Schedule_A__c.field-meta.xml
<CustomField>
    <fullName>Schedule_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PA Model Upload</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <filterItems>
            <field>Schedule_A__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Schedule_A__c.Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Schedule_A__c</referenceTo>
    <relationshipLabel>Deal Reviews</relationshipLabel>
    <relationshipName>Deal_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>