force-app/main/default/objects/Deal_Review__c/fields/Slack_Message_TS__c.field-meta.xml
<CustomField>
    <fullName>Slack_Message_TS__c</fullName>
    <label>toBedeleted Slack Message TS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>