force-app/main/default/objects/Deal_Review__c/fields/Submitter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Comments__c</fullName>
    <label>Submitter Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>