force-app/main/default/objects/Deal_Review__c/fields/Total_Cashview_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Cashview_Margin_Percent__c</fullName>
    <label>Total Cashview Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>