force-app/main/default/objects/Deal_Review__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>LGK__Transaction__c</referenceTo>
    <relationshipLabel>Deal Reviews</relationshipLabel>
    <relationshipName>Deal_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>