force-app/main/default/objects/Deal_Review__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Hidden field used to create warning flags on the deal review page when the user is not following the proper process</description>
    <label>Utility</label>
    <type>Checkbox</type>
</CustomField>