force-app/main/default/objects/Deal_Review__c/validationRules/Business_Unit_Mapping_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Unit_Mapping_Required</fullName>
    <active>true</active>
    <description>Added it as a part of story #36540 : Stop creating deal review record if Business unit is null.</description>
    <errorConditionFormula>ISBLANK(Business_Unit__c)</errorConditionFormula>
    <errorMessage>The Business Unit related to your Opportunity cannot be determined. Please review the Primary Product Line for accuracy.</errorMessage>
</ValidationRule>