force-app/main/default/objects/Deal_Review__c/validationRules/Enforce_Proper_Procedure.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Proper_Procedure</fullName>
    <active>true</active>
    <description>stops users from using the +New Record feature from the Opportunity layout</description>
    <errorConditionFormula>IF(Utility__c = TRUE, TRUE, FALSE)</errorConditionFormula>
    <errorMessage>This is an invalid method to create a Deal Review.
Please use the &quot;New Deal Review&quot; button on the Opportunity page</errorMessage>
</ValidationRule>