force-app/main/default/objects/Deal_Review__c/validationRules/If_No_PA_Model_specify_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>If_No_PA_Model_specify_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 No_PA_Model_Required__c  = True,
  ISPICKVAL( Reason_for_No_PA_Model__c , &quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Reason_for_No_PA_Model__c</errorDisplayField>
    <errorMessage>Please specify a value for &quot;Reason for No PA Model&quot;</errorMessage>
</ValidationRule>