force-app/main/default/objects/Deal_Review__c/validationRules/If_No_PAModel_Submitter_Comments_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>If_No_PAModel_Submitter_Comments_Require</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
No_PA_Model_Required__c = True,
ISBLANK( Submitter_Comments__c ) 
)</errorConditionFormula>
    <errorDisplayField>Submitter_Comments__c</errorDisplayField>
    <errorMessage>Submitter Comments are required when No PA Model is included</errorMessage>
</ValidationRule>