force-app/main/default/objects/Deal_Review__c/validationRules/Primary_Product_Line_and_Country_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Product_Line_and_Country_Require</fullName>
    <active>true</active>
    <description>Make Primary Product Line &amp; Billing Country mandatory of opp fields when Deal Review is created.</description>
    <errorConditionFormula>AND(
ISNEW(),
 OR(
ISBLANK( TEXT(Opportunity__r.Primary_Product_Line__c)), 
ISBLANK( Opportunity__r.Billing_Country__c )
   )
)</errorConditionFormula>
    <errorMessage>Deal Review requires Billing Country and Primary Product Line. Please update these Opportunity fields</errorMessage>
</ValidationRule>