force-app/main/default/objects/Deal_Review__c/validationRules/Recalled_Lock_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Recalled_Lock_Record</fullName>
    <active>true</active>
    <description>Recalled Deal Reviews are locked from further edits</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Recalled&apos;)</errorConditionFormula>
    <errorMessage>This record has been Recalled, please create a new Deal Review to proceed</errorMessage>
</ValidationRule>