force-app/main/default/objects/Deal_Review__c/validationRules/Restrict_Primary_On_Non_Approved_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Primary_On_Non_Approved_Record</fullName>
    <active>true</active>
    <description>Non Approved Deal Reviews are not allowed to mark as Primary</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &apos;Approved&apos;)),Primary__c)</errorConditionFormula>
    <errorMessage>Only Approved Deal Reviews can be marked as &quot;Primary&quot;</errorMessage>
</ValidationRule>