force-app/main/default/objects/Deal_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Deal_Level__c</columns>
    <columns>Schedule_A__c</columns>
    <columns>Red_Flag__c</columns>
    <columns>ORB_Required__c</columns>
    <columns>Status__c</columns>
    <columns>L1_Approver__c</columns>
    <columns>L1_Approved_Date__c</columns>
    <columns>L2_Finance_Approver__c</columns>
    <columns>L2_Finance_Approved_Date__c</columns>
    <columns>L2_Commercial_Approver__c</columns>
    <columns>L2_Commercial_Approved_Date__c</columns>
    <columns>L3_GRO_CFO_Approved_Date__c</columns>
    <columns>L3_Global_RIM_EVP_Approved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>DR-100317</value>
    </filters>
    <label>All</label>
</ListView>