force-app/main/default/objects/Deal_Review__c/listViews/My_Deal_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Deal_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Deal_Approval_Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Deal_Level__c</columns>
    <columns>Red_Flag__c</columns>
    <columns>ORB_Required__c</columns>
    <columns>L1_Approver__c</columns>
    <columns>L1_Approved_Date__c</columns>
    <columns>L2_Finance_Approver__c</columns>
    <columns>L2_Finance_Approved_Date__c</columns>
    <columns>L2_Commercial_Approver__c</columns>
    <columns>L2_Commercial_Approved_Date__c</columns>
    <columns>L3_GRO_CFO_Approver__c</columns>
    <columns>L3_Global_RIM_EVP_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Deal Reviews</label>
</ListView>